--- a/pagehtml.css
+++ b/pagehtml.css
@@ -5,7 +5,11 @@
 
 }
 .body{
-    background-color: black;
+    background-color: None;
+    /* background-image: url("https://m.media-amazon.com/images/I/71V9nv5oIEL._AC_SX466_.jpg"); */
+    background-repeat: no-repeat;
+    background-position: top left;
+    background-attachment: scroll;
 
 }
 .heading2{
@@ -46,4 +50,35 @@ button{
 }
 p{
     color: cornflowerblue;
+}
+/* ul{
+  color: white;
+  list-style-type:circle;
+} */
+
+
+ul {
+  list-style-type: none;
+  border-left-style: solid;
+  border-left-width: 15px;
+  border-color: rgba(4, 32, 243, 0.977);
+  margin-left: 170px; 
+  overflow: hidden;
+  /* background-color:white; */
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
 }
