new css and javascript comands

--- a/pagehtml.css
+++ b/pagehtml.css
@@ -69,6 +69,8 @@ ul {
   background-repeat: no-repeat;
   background-size: 50px 50px;
   background-color:rgb(164, 239, 242);
+  /* background-color: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); */
+  box-shadow: 10px 10px 5px;
 }
 
 li {
@@ -93,7 +95,7 @@ li a:hover {
 .divm{
   margin-left: 40px;
 }
-video{
+/* video{
   width: 1000px;
   height: 100px;
-}
+} */
