--- a/pagehtml.css
+++ b/pagehtml.css
@@ -4,6 +4,12 @@
     text-transform: capitalize;
 
 }
+.headingpg2{
+  text-align: center;
+  color: black;
+  text-transform: capitalize;
+
+}
 .body{
     background-color: None;
     /* background-image: url("https://m.media-amazon.com/images/I/71V9nv5oIEL._AC_SX466_.jpg"); */
@@ -63,22 +69,22 @@ ul {
   border-left-width: 15px;
   border-color: rgba(4, 32, 243, 0.977);
   /* margin-left: 0;  */
-  overflow: hidden;
+  /* overflow: hidden; */
   background-image: url("https://m.media-amazon.com/images/I/71V9nv5oIEL._AC_SX466_.jpg");
   background-position: top left;
-  background-repeat: no-repeat;
-  background-size: 50px 50px;
-  background-color:rgb(164, 239, 242);
-  /* background-color: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); */
-  box-shadow: 10px 10px 5px;
+  background-repeat: no-repeat; 
+  background-size: 50px,50px;
+  background-color:rgb(183, 243, 245);
+  /* background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); */
+  box-shadow: 10px 10px 50px;
 }
 
 li {
   float: left;
 }
 
-li a {
-  display: block;
+.lia {
+  display: inline-block;
   color: black;
   text-align: center;
   padding: 16px;
@@ -95,7 +101,76 @@ li a:hover {
 .divm{
   margin-left: 40px;
 }
+
 /* video{
   width: 1000px;
   height: 100px;
 } */
+
+
+
+.dropbtn {
+  background-color: inherit;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  color: none;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: black;
+}
+
+
+
+.btn {
+  background-color: white; 
+  border: none;
+  color: black;
+  padding: 12px 16px; /* Some padding */
+  font-size: 50px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: black;
+  color: white;
+  border-radius: 20px;
+  
+}
