--- a/pagehtml.css
+++ b/pagehtml.css
@@ -159,13 +159,14 @@ li a:hover {
 
 
 .btn {
-  background-color: white; 
+  /* background-color: white;  */
   border: none;
   color: black;
   padding: 12px 16px; /* Some padding */
   font-size: 30px; /* Set a font size */
   cursor: pointer; /* Mouse pointer on hover */
-  display: inline;
+  /* display: inline; */
+  
   
 }
 
@@ -173,11 +174,12 @@ li a:hover {
 .btn:hover {
   background-color: black;
   color: white;
-  border-radius: 20px;
+  border-radius: 10%;
   
 }
 .grid-container {
-  padding: 10px;
+  padding: 60px 20px 20px 20px ;
+  /* padding-top: 30px; */
   display: grid;
   gap: 5px;
   background-color: white
@@ -213,9 +215,16 @@ li a:hover {
 }
 .barhome{
   max-height: 60px;
+  width: 100%;
   background-color: antiquewhite;
-  /* display: inline-block; */
+  display: inline-block;
   overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: 10px 10px 15px;
 }
 .pin{
   display: inline;
